RULER - ATT GRANSKA/doc/grammar.txt
CHAR ::= Any unicode character encoded as UTF-8

BOOL_LITERAL ::= 'true' | 'false'

INT_LITERAL ::= [0-9]+

STRING_LITERAL ::= '"' + CHAR* + '"'

END = ::= 'end'

CONCEPT_T ::= 'concept'

RULE_T ::= 'rule'

QUERY ::= 'query' + '[' + STRING_LITERAL + ']'

COMPARISON_OP ::= '<' | '>'

EQUALITY_OP ::= '==' | '!='

LOGIC_OP ::= '&&' | '||'

IDENTIFIER ::= [A-Za-z][A-Za-z0-9_]+


PRIMARY ::= BOOLEAN_LITERAL | STRING_LITERAL | INT_LITERAL | QUERY
    | IDENTIFIER

COMPARISON_COND ::= PRIMARY + COMPARISON_OP + PRIMARY

EQUALITY_COND ::= PRIMARY + EQUALITY_OP + PRIMARY

LOGIC_COND ::= (COMPARISON_COND | EQUALITY_COND | PRIMARY) + (LOGIC_OP
    + (COMPARISON_COND | EQUALITY_COND | PRIMARY))+

CONDITIONAL ::= COMPARISON_COND | EQUALITY_COND | LOGIC_COND | PRIMARY

CONCEPT ::= CONCEPT_T + IDENTIFIER + CONDITIONAL + END

ARGUMENT ::= BOOLEAN_LITERAL | STRING_LITERAL | INT_LITERAL

ACTION ::= IDENTIFIER (+ ARGUMENT)*

RULE ::= RULE_T + IDENTIFIER + CONDITIONAL (+ ACTION)* + END
